Update City to use Pageable instead of List